--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,9 @@ body{
     padding: none;
     margin: 0px;
    }
+   #noscript{
+       display: none;
+   }
    /*Outros dispositivos, portrait*/
    @media (max-width: 350px) {
     #header{
